--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         </title>
     </head>
        <body> 
-        <h1>Como tudo começou</h1>
+        <h1>Sobre o jogo</h1>
         <p>Elden Ring, criado pela famosa empresa Fromsoftware, foi um jogo lançado em 2022, o mesmo foi alvo de diversos elogios da crítica, acabando recebendo o prêmio de jogo do ano</p>
-        <p>O jogo e baseia em um rpg soulslike de mundo aberto</p>
+        <p>O jogo se baseia em um rpg soulslike de mundo aberto</p>
+        <p>Porem, o mesmo vai muito alem disso, com uma história complexa, mas cativante, o jogo lhe da uma experiencia imersiva, em que você faz sua própria jornada.</p>
+        <p>o jogo oferece muitas classes diferentes, muitos personagens com estilos unicos de jogar, você pode ser de um mago, a um samurai, de um profeta, a um assasino. Com mihares de possibilidades, é verdadeiramente uma experiencia que amei participar. Porem , avisos são nescessarios, pois o mesmo é conhecido pela sua extrema dificuldade a todo momento, sendo muito frenético. </p>
+        <p> No momento, é o que posso falar, ja que a experiencia deve ser uma surpresa para cada, e lembre,acima de tudo e todos, não desista, não importe quantas vezes você morra.
        </body>
